# waveview-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.seedlink  Dockerfile.sinoas  README.md  docker-compose.yml  entrypoint.sh  entrypoint_celery.sh  manage.py  pyproject.toml  tox.ini
conf/docker/: server.conf  waveview.conf
conf/nginx/: waveview.conf
conf/supervisor/: autopicker.conf  seedlink.conf  sinoas.conf  waveview-celery.conf  waveview-celerybeat.conf  waveview.conf
docs/: conf.py  index.rst  license.rst  support.rst
docs/developer/: index.rst
docs/guides/: architecture.rst  configuration.rst  docker.rst  event_observer.rst  installation.rst  picker_configuration.rst  rest_api.rst  setup.rst  troubleshooting.rst  websocket.rst
fixtures/: bma-bulletin.json  event-types.json  fall-directions.json  inventory-data-source.json  magnitude-config.MEPUS.json  magnitude-config.json  picker-config.MEPUS.json  picker-config.json  seismogram-station-config.json
tests/amplitude/: test_remove_outliers.py
tests/btbb/: test_reader.py
tests/inventory_schema/: test_query.py  test_schema.py  test_stream.py  test_stream_gap.py  test_table_size.py
tests/signal/: test_spectrogram.py
tests/sinoas/: test_create_event.py  test_detector.py  test_fetcher.py
waveview/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
waveview/api/: base.py  pagination.py  permissions.py  serializers.py  urls.py
waveview/appconfig/: admin.py  apps.py  models.py  serializers.py
waveview/catalog/: admin.py  apps.py  models.py
waveview/data/: sample.mseed  sample.py
waveview/event/: admin.py  amplitude.py  apps.py  header.py  magnitude.py  observers.py  registry.py  signals.py
waveview/feedback/: admin.py  apps.py  models.py  serializers.py
waveview/inventory/: admin.py  apps.py  datastream.py  header.py  signals.py  stationxml.py  (+1 more)
(+257 files in other folders)
